3.0 Reworked GUI to find suitable distributions more than once. Added SL functionality.